test/hotCases/errors/events/f.js
import g from "./g";

if(module.hot) {
	module.hot.decline("./g");
}